--- a/to-do-app-deployment.yml
+++ b/to-do-app-deployment.yml
@@ -1,5 +1,3 @@
-# This file defines the Kubernetes objects for the Node.js notes application.
-
 # 1. ConfigMap for non-sensitive configuration.
 # This tells the app how to find the database service.
 apiVersion: v1
@@ -8,7 +6,8 @@ metadata:
   name: to-do-app-config
 data:
   POSTGRES_HOST: "postgres-service"
-  
+---
+# 2. Deployment for the main application.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -43,18 +42,3 @@ spec:
             limits:
               memory: "128Mi"
               cpu: "250m"
----
-# 3. Service to expose the notes application to the internet.
-# Using type LoadBalancer will provision an external IP address on most cloud providers.
-apiVersion: v1
-kind: Service
-metadata:
-  name: to-do-app-service
-spec:
-  type: LoadBalancer
-  ports:
-    - port: 80 # External port
-      targetPort: 3000 # Internal port of the container
-  selector:
-    app: to-do-app
-
